Stop game breaking on small browsers

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 
 body {
   font-family: $regular-font, sans-serif;
+  min-width: 1000px;
 }
 
 h1, h2, h3 {
